sumo/tests/sumo/extended/emitter/errors/routedist/false_id/errors.sumo
Error: MSTriggeredSource emitter: Route 'xxx' does not exist.
Quitting (on error).
